--- a/index.html
+++ b/index.html
@@ -16,9 +16,18 @@
         <h1 class="text-muted text-center my-4">Weather Application</h1>
         <form class="change-location my-4 text-center text-muted ">
             <label for="city">Enter a Location for weather Location</label>
-            <input type="text" name="city" class="form-control p-2 move">
-            <button type="submit" class="btn btn-secondary">Enter</button>
+            <div class="overall">
+                <input type="text" name="city" class="form-control p-2" id="move" value="" placeholder="Enter a city..."
+                    required>
+
+                <button type="submit" class="btn btn-secondary">Enter</button>
+            </div>
+
+            <div id="result-box">
+            </div>
+
         </form>
+
         <div class="card shadow-lg rounded d-none">
             <img src="https://via.placeholder.com/400x300" class="time card-img-top">
             <div class="icon bg-light mx-auto text-center">
